# rx

./: .gitignore  .gitignore.save  .log.txt.swp  .makefile.swp  AUTHORS  CBasicMath.cpp  CBasicMath.h  CMakeList.txt  Makefile  Makefile (copy 1)  Makefile.am  Makefile.bak  Makefile.in  NEWS  README  README.md  TestBasicMath.cpp  after.autoreconf.txt  before.autoreconf.txt  cleandist.sh  commit.txt  config.h  config.h.in  configure  configure.2  configure.ac  configure.ac~  configure.scan  cppRxTestResults.xml  functions.cpp  functions.h  log.txt  main.cpp  makefile  makefile.bak  makefile.mak  notes.txt  octave-workspace  readme.md  rx  (+6 more)
.deps/: main.Po  rx.Po  rx.Tpo
autom4te.cache/: output.0  requests  traces.0
bak/: .gitignore  Makefile  Makefile copy  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac.2  configure.scan  libtool
cppunit/: Makefile  Makefile.am  MoneyApp.cpp  build.sh  configure.ac  makefile
doc/: Makefile  Makefile.am  todo
examples/: Makefile.am
make/: Makefile
man/: install.sh  rx.1
script/: diff.sh  generic_diff.sh  git-file-hist.sh  h  hist.sh  kdiff3.sh  kompare.sh  meld.sh  notes.txt  rdif.sh  template.sh
src/: CMakeLists.txt  Makefile  Makefile.am  OptionParser.cpp  OptionParser.hpp  _utility.hpp  bash_color.h  bash_color.hpp  bash_color_test  bash_color_test.cpp  elf.txt  elf_symbols.txt  main  main.cpp  main.hpp  rx.cpp  rx.hpp  rx_test.cpp  rx_test.hpp  rx_test_test.cpp  rxx  std.hpp  test.cpp  test.hpp  test.html  utility.cpp
test/: GDB_PIPE_DEBUG  email.txt  error  exp_fopt.txt  fail  fopt.txt  (+16 more)
(+12 files in other folders)
